# FPGA_Router

./: .gitignore  CMakeLists.txt  build.sh  run.sh
benchmarks/: README.md
include/: DataTypes.hpp  Design.hpp  FastParser.hpp  Global.hpp  Utils.hpp
scripts/: consolidate_net_groups.py  net_groups_case03.txt  output_consolidated_case03.txt  visualization.html  visualization_data.json
src/: Design.cpp  FastParser.cpp  Utils.cpp  main.cpp
